--- a/BE/settings.json
+++ b/BE/settings.json
@@ -60,7 +60,7 @@
             "order": 1,
             "name": "체력 회복 - 8회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-11T17:36:26.164945",
+            "updated_at": "2024-12-11T20:16:28.845759",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 /",
@@ -68,7 +68,7 @@
                 "scan_code": 53,
                 "virtual_key": 111
             },
-            "repeat_count": 8,
+            "repeat_count": 5,
             "is_nested": false,
             "items": [
                 {
@@ -392,7 +392,7 @@
             "order": 5,
             "name": "보호 무장 힘",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-12-11T17:36:26.164945",
+            "updated_at": "2024-12-11T20:22:54.019748",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 .",
@@ -766,7 +766,7 @@
             "order": 7,
             "name": "공력증강 - 연속1회 - 사냥용",
             "created_at": "2024-12-08T13:23:32.528363",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:13:11.251974",
             "trigger_key": {
                 "key_code": "숫자패드 6",
                 "modifiers": 0,
@@ -818,7 +818,7 @@
             "order": 8,
             "name": "공력증강 - 연속5회",
             "created_at": "2024-12-08T20:41:36.805524",
-            "updated_at": "2024-12-11T18:07:22.281111",
+            "updated_at": "2024-12-11T20:04:02.819832",
             "trigger_key": null,
             "repeat_count": 5,
             "is_nested": true,
@@ -865,7 +865,7 @@
             "order": 9,
             "name": "공력증강 - 5회",
             "created_at": "2024-11-30T16:57:51.034740",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:22:45.622335",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -987,7 +987,7 @@
             "order": 11,
             "name": "첨 중독, 저주, 마비 - 1회",
             "created_at": "2024-11-30T10:25:06.438732",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:13:11.189709",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -1306,30 +1306,30 @@
             "order": 12,
             "name": "중독, 마비 첨 사냥 - 무한반복",
             "created_at": "2024-12-08T21:25:24.196785",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:13:11.284049",
             "trigger_key": {
                 "key_code": "숫자패드 *",
                 "modifiers": 0,
                 "scan_code": 55,
                 "virtual_key": 106
             },
-            "repeat_count": 9999,
+            "repeat_count": 1,
             "is_nested": false,
             "items": [
                 {
                     "order": 1,
                     "type": "logic",
-                    "display_text": "보호 무장 힘",
-                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
-                    "logic_name": "보호 무장 힘",
+                    "display_text": "첨 중독, 저주, 마비 - 1회",
+                    "logic_id": "970a1723-88f9-4a50-8bb4-4f8c8f8199fe",
+                    "logic_name": "첨 중독, 저주, 마비 - 1회",
                     "repeat_count": 1
                 },
                 {
                     "order": 2,
                     "type": "logic",
-                    "display_text": "첨 중독, 저주, 마비 - 1회",
-                    "logic_id": "970a1723-88f9-4a50-8bb4-4f8c8f8199fe",
-                    "logic_name": "첨 중독, 저주, 마비 - 1회",
+                    "display_text": "공력증강 - 연속1회 - 사냥용",
+                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
+                    "logic_name": "공력증강 - 연속1회 - 사냥용",
                     "repeat_count": 1
                 },
                 {
@@ -1366,14 +1366,6 @@
                 },
                 {
                     "order": 7,
-                    "type": "logic",
-                    "display_text": "공력증강 - 연속1회 - 사냥용",
-                    "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
-                    "logic_name": "공력증강 - 연속1회 - 사냥용",
-                    "repeat_count": 1
-                },
-                {
-                    "order": 8,
                     "type": "logic",
                     "display_text": "공력증강 - 연속1회 - 사냥용",
                     "logic_id": "d84e2e7b-f0ab-4213-9c39-07b12b94b7f7",
@@ -1895,7 +1887,7 @@
             "order": 19,
             "name": "중독만 - 5회 (첨이랑 딱 맞음)",
             "created_at": "2024-12-08T20:39:14.995922",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:12:40.930043",
             "trigger_key": null,
             "repeat_count": 5,
             "is_nested": true,
@@ -2979,7 +2971,7 @@
             "order": 27,
             "name": "마비 상하 - 1회",
             "created_at": "2024-12-09T13:55:26.337819",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:12:40.903470",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -3116,7 +3108,7 @@
             "order": 28,
             "name": "마비 좌우 - 1회",
             "created_at": "2024-12-09T13:56:02.913186",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:12:40.912492",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -3510,7 +3502,7 @@
             "order": 30,
             "name": "저주 상하 - 1회",
             "created_at": "2024-12-09T14:29:26.182552",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:12:40.886901",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -3647,7 +3639,7 @@
             "order": 31,
             "name": "저주 좌우 - 1회",
             "created_at": "2024-12-09T14:29:33.887956",
-            "updated_at": "2024-12-11T17:36:26.165949",
+            "updated_at": "2024-12-11T20:12:40.895439",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -4297,17 +4289,23 @@
                 }
             ]
         },
-        "31a9898a-a628-4942-831d-77d65da88daf": {
-            "order": 37,
-            "name": "테스트",
-            "created_at": "2024-12-11T18:07:22.279110",
-            "updated_at": "2024-12-11T19:58:46.818824",
+        "fa5f27bc-de45-4db8-855e-f3e0bde846d0": {
+            "order": 38,
+            "name": "마우스 클릭 테스트",
+            "created_at": "2024-12-11T20:07:53.038693",
+            "updated_at": "2024-12-11T20:23:13.364526",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
             "items": [
                 {
-                    "order": 1,
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.01초",
+                    "duration": 0.01,
+                    "order": 1
+                },
+                {
+                    "order": 2,
                     "display_text": "키 입력: 엔터 --- 누르기",
                     "action": "누르기",
                     "type": "key_input",
@@ -4317,7 +4315,7 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 2,
+                    "order": 3,
                     "display_text": "키 입력: 엔터 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -4327,25 +4325,33 @@
                     "modifiers": 0
                 },
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.01초",
-                    "duration": 0.01,
-                    "order": 3
-                },
-                {
                     "order": 4,
                     "type": "logic",
-                    "display_text": "공력증강 - 연속5회",
-                    "logic_id": "53ff5f5a-747a-4ebf-9f58-8adb8026eb9f",
-                    "logic_name": "공력증강 - 연속5회",
+                    "display_text": "보호 무장 힘",
+                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
+                    "logic_name": "보호 무장 힘",
                     "repeat_count": 1
                 },
                 {
-                    "order": 4,
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.01초",
+                    "duration": 0.01,
+                    "order": 5
+                },
+                {
+                    "order": 6,
                     "type": "logic",
-                    "display_text": "공력증강 - 연속5회",
-                    "logic_id": "53ff5f5a-747a-4ebf-9f58-8adb8026eb9f",
-                    "logic_name": "공력증강 - 연속5회",
+                    "display_text": "공력증강 - 5회",
+                    "logic_id": "ba00b4b7-4268-4138-a424-d1e9353d7743",
+                    "logic_name": "공력증강 - 5회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 6,
+                    "type": "logic",
+                    "display_text": "공력증강 - 5회",
+                    "logic_id": "ba00b4b7-4268-4138-a424-d1e9353d7743",
+                    "logic_name": "공력증강 - 5회",
                     "repeat_count": 1
                 }
             ]
