--- a/BE/settings.json
+++ b/BE/settings.json
@@ -392,7 +392,7 @@
             "order": 5,
             "name": "보호 무장 힘",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-12-11T23:24:36.184126",
+            "updated_at": "2024-12-11T23:49:41.280190",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 .",
@@ -4301,7 +4301,7 @@
             "order": 39,
             "name": "테스트",
             "created_at": "2024-12-11T21:30:39.063045",
-            "updated_at": "2024-12-11T23:24:57.674786",
+            "updated_at": "2024-12-11T23:59:26.593156",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -4335,9 +4335,17 @@
                 {
                     "order": 4,
                     "type": "logic",
-                    "display_text": "첨, 중독 - 9999회",
-                    "logic_id": "0f7febe4-03e2-4e00-bc00-4517a9a33556",
-                    "logic_name": "첨, 중독 - 9999회",
+                    "display_text": "보호 무장 힘",
+                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
+                    "logic_name": "보호 무장 힘",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 4,
+                    "type": "logic",
+                    "display_text": "보호 무장 힘",
+                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
+                    "logic_name": "보호 무장 힘",
                     "repeat_count": 1
                 }
             ]
