--- a/BE/settings.json
+++ b/BE/settings.json
@@ -315,7 +315,7 @@
             "order": 4,
             "name": "체력 회복 - 1회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-11T23:13:29.077891",
+            "updated_at": "2024-12-12T00:04:05.377041",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "키 코드 192",
@@ -4301,7 +4301,7 @@
             "order": 39,
             "name": "테스트",
             "created_at": "2024-12-11T21:30:39.063045",
-            "updated_at": "2024-12-11T23:59:26.593156",
+            "updated_at": "2024-12-12T00:04:05.406011",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -4335,17 +4335,9 @@
                 {
                     "order": 4,
                     "type": "logic",
-                    "display_text": "보호 무장 힘",
-                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
-                    "logic_name": "보호 무장 힘",
-                    "repeat_count": 1
-                },
-                {
-                    "order": 4,
-                    "type": "logic",
-                    "display_text": "보호 무장 힘",
-                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
-                    "logic_name": "보호 무장 힘",
+                    "display_text": "체력 회복 - 1회",
+                    "logic_id": "ed0d7b48-c7ac-4397-8ce5-360143efa401",
+                    "logic_name": "체력 회복 - 1회",
                     "repeat_count": 1
                 }
             ]
