--- a/BE/settings.json
+++ b/BE/settings.json
@@ -4301,7 +4301,7 @@
             "order": 39,
             "name": "테스트",
             "created_at": "2024-12-11T21:30:39.063045",
-            "updated_at": "2024-12-12T00:04:05.406011",
+            "updated_at": "2024-12-12T00:19:36.873933",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -4331,6 +4331,14 @@
                     "display_text": "지연시간 : 0.01초",
                     "duration": 0.01,
                     "order": 3
+                },
+                {
+                    "order": 4,
+                    "type": "logic",
+                    "display_text": "체력 회복 - 1회",
+                    "logic_id": "ed0d7b48-c7ac-4397-8ce5-360143efa401",
+                    "logic_name": "체력 회복 - 1회",
+                    "repeat_count": 1
                 },
                 {
                     "order": 4,
