--- a/BE/settings.json
+++ b/BE/settings.json
@@ -4301,52 +4301,27 @@
             "order": 39,
             "name": "테스트",
             "created_at": "2024-12-11T21:30:39.063045",
-            "updated_at": "2024-12-12T00:19:36.873933",
-            "trigger_key": null,
+            "updated_at": "2024-12-12T00:24:06.833700",
+            "trigger_key": {
+                "key_code": "Space",
+                "modifiers": 0,
+                "scan_code": 57,
+                "virtual_key": 32
+            },
             "repeat_count": 1,
-            "is_nested": true,
+            "is_nested": false,
             "items": [
                 {
                     "order": 1,
-                    "display_text": "키 입력: 엔터 --- 누르기",
-                    "action": "누르기",
-                    "type": "key_input",
-                    "key_code": "엔터",
-                    "scan_code": 28,
-                    "virtual_key": 13,
-                    "modifiers": 0
-                },
-                {
-                    "order": 2,
-                    "display_text": "키 입력: 엔터 --- 떼기",
-                    "action": "떼기",
-                    "type": "key_input",
-                    "key_code": "엔터",
-                    "scan_code": 28,
-                    "virtual_key": 13,
-                    "modifiers": 0
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.01초",
-                    "duration": 0.01,
-                    "order": 3
-                },
-                {
-                    "order": 4,
-                    "type": "logic",
-                    "display_text": "체력 회복 - 1회",
-                    "logic_id": "ed0d7b48-c7ac-4397-8ce5-360143efa401",
-                    "logic_name": "체력 회복 - 1회",
-                    "repeat_count": 1
-                },
-                {
-                    "order": 4,
-                    "type": "logic",
-                    "display_text": "체력 회복 - 1회",
-                    "logic_id": "ed0d7b48-c7ac-4397-8ce5-360143efa401",
-                    "logic_name": "체력 회복 - 1회",
-                    "repeat_count": 1
+                    "type": "mouse_input",
+                    "display_text": "마우스 입력: fg (3168, 117)",
+                    "name": "fg",
+                    "action": "클릭",
+                    "button": "왼쪽 버튼",
+                    "coordinates_x": 3168,
+                    "coordinates_y": 117,
+                    "ratios_x": 0.9664429530201343,
+                    "ratios_y": 0.06439185470555861
                 }
             ]
         }
