--- a/BE/settings.json
+++ b/BE/settings.json
@@ -4301,27 +4301,33 @@
             "order": 39,
             "name": "테스트",
             "created_at": "2024-12-11T21:30:39.063045",
-            "updated_at": "2024-12-12T00:24:06.833700",
+            "updated_at": "2024-12-12T00:46:44.034144",
             "trigger_key": {
-                "key_code": "Space",
+                "key_code": "1",
                 "modifiers": 0,
-                "scan_code": 57,
-                "virtual_key": 32
+                "scan_code": 2,
+                "virtual_key": 49
             },
             "repeat_count": 1,
             "is_nested": false,
             "items": [
                 {
-                    "order": 1,
+                    "type": "delay",
+                    "display_text": "지연시간 : 1.0초",
+                    "duration": 1.0,
+                    "order": 1
+                },
+                {
+                    "order": 2,
                     "type": "mouse_input",
-                    "display_text": "마우스 입력: fg (3168, 117)",
-                    "name": "fg",
+                    "display_text": "마우스 입력: 메뉴 (3180, 117)",
+                    "name": "메뉴",
                     "action": "클릭",
                     "button": "왼쪽 버튼",
-                    "coordinates_x": 3168,
+                    "coordinates_x": 3180,
                     "coordinates_y": 117,
-                    "ratios_x": 0.9664429530201343,
-                    "ratios_y": 0.06439185470555861
+                    "ratios_x": 0.9665653495440729,
+                    "ratios_y": 0.0642504118616145
                 }
             ]
         }
